Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
 <h5>
 <a id="single-responsibility-micro-services" class="anchor" href="#single-responsibility-micro-services" aria-hidden="true"><span class="octicon octicon-link"></span></a>Single responsibility micro-services</h5>
 
-<p>These provide different functionality, such as running the Illumina <code>bcl2fastq</code> program, check if a runfolder is ready to be analyzed, or removes data once certain criterias are met. The separation to responsiblities between services means that you can pick and chose which ones suite your particular workflow and infrastructure configuration. Examples can be found here: <a href="https://github.com/arteria-project/arteria-lib">https://github.com/arteria-project/arteria-lib</a></p>
+<p>These provide different functionality, such as running the Illumina <code>bcl2fastq</code> program, check if a runfolder is ready to be analyzed, or removes data once certain criterias are met. The separation to responsiblities between services means that you can pick and chose which ones suite your particular workflow and infrastructure configuration. Examples can be found here:</p>
+
+<ul>
+<li><a href="https://github.com/arteria-project/arteria-runfolder">https://github.com/arteria-project/arteria-runfolder</a></li>
+<li><a href="https://github.com/arteria-project/arteria-bcl2fastq">https://github.com/arteria-project/arteria-bcl2fastq</a></li>
+<li><a href="https://github.com/arteria-project/arteria-siswrap">https://github.com/arteria-project/arteria-siswrap</a></li>
+</ul>
 
 <h5>
 <a id="stackstorm-packs" class="anchor" href="#stackstorm-packs" aria-hidden="true"><span class="octicon octicon-link"></span></a>StackStorm packs</h5>
